--- a/src/style/cornflowerblue.css
+++ b/src/style/cornflowerblue.css
@@ -4443,19 +4443,22 @@ div.window-container div.dialog div.actions button:last-child:not(:only-of-type)
 div.window-container div.dialog.isform div.content {
   margin: 0;
   padding: 0;
+  overflow: hidden;
 }
 div.window-container div.dialog.isform div.content form {
   position: relative;
   margin: 0;
   border: 0;
   padding: 0;
+  display: flex;
+  flex-direction: column;
+  height: 100%;
 }
 div.window-container div.dialog.isform div.content form div.contentbox {
   position: relative;
   flex-grow: 1;
-  max-height: 30%;
   padding: 0.5em 1.5em 0.5em 1.5em;
-  overflow: visible;
+  overflow: auto;
   z-index: 10;
 }
 div.window-container div.dialog.isform div.content form div.contentbox div.header,
@@ -5130,6 +5133,23 @@ div.datagrid-container table.grid tbody tr td {
   padding: 1em;
   white-space: nowrap;
 }
+div.datagrid-container table.grid tbody tr td button {
+  background-color: transparent;
+}
+@media (hover: hover) and (pointer: fine) {
+  div.datagrid-container table.grid tbody tr td button:hover {
+    background-image: none;
+    box-shadow: none;
+  }
+}
+div.datagrid-container table.grid tbody tr td button.menu[aria-expanded=true] {
+  --button-border-color: var(--focus-color);
+  --button-default-color: var(--focus-color);
+  --button-default-text-color: var(--focus-color);
+  opacity: 1;
+  background-image: none;
+  box-shadow: var(--button-ghost-box-shadow);
+}
 div.datagrid-container table.grid tbody tr td.italic {
   font-style: oblique;
 }
@@ -5152,23 +5172,6 @@ div.datagrid-container table.grid tbody tr.hidden, div.datagrid-container table.
 }
 div.datagrid-container table.grid tbody tr[data-matched-filters][data-search-hidden=true] {
   display: none;
-}
-div.datagrid-container table.grid tbody tr button {
-  background-color: transparent;
-}
-@media (hover: hover) and (pointer: fine) {
-  div.datagrid-container table.grid tbody tr button:hover {
-    background-image: none;
-    box-shadow: none;
-  }
-}
-div.datagrid-container table.grid tbody tr button.menu[aria-expanded=true] {
-  --button-border-color: var(--focus-color);
-  --button-default-color: var(--focus-color);
-  --button-default-text-color: var(--focus-color);
-  opacity: 1;
-  background-image: none;
-  box-shadow: var(--button-ghost-box-shadow);
 }
 div.datagrid-container table.grid tbody tr:focus-within button {
   box-shadow: none;
@@ -5338,6 +5341,18 @@ div.datagrid-container table.grid.selectable tbody tr[aria-selected=true] > td {
 }
 div.datagrid-container table.grid.selectable tbody tr[aria-selected=true]:focus {
   outline: var(--datagrid-grid-selected-text-color) dashed 0.1em;
+}
+@media (hover: hover) and (pointer: fine) {
+  div.datagrid-container table.grid.selectable tbody tr[aria-selected=true]:hover {
+    background-color: var(--datagrid-grid-hover-background-color);
+    color: var(--datagrid-grid-hover-text-color);
+    text-shadow: var(--datagrid-grid-hover-text-shadow);
+  }
+  div.datagrid-container table.grid.selectable tbody tr[aria-selected=true]:hover > td {
+    opacity: 1;
+    background-color: var(--datagrid-grid-hover-background-color);
+    box-shadow: none;
+  }
 }
 div.datagrid-container table.grid.schoriz td.mechanical,
 div.datagrid-container table.grid.schoriz th.mechanical {
